chore(hugo): align hugo imaging.anchor caseing with yaml schema

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -62,7 +62,7 @@ enableEmoji: true
 imaging:
   resampleFilter: CatmullRom # cspell:disable-line
   quality: 75
-  anchor: smart
+  anchor: Smart
 
 markup:
   tableOfContents:
