fix(refcache): update OneUptime vendor URL
Signed-off-by: Vitor Vasconcellos <vitor.vasconcellos@mercadolivre.com>

--- a/data/ecosystem/vendors.yaml
+++ b/data/ecosystem/vendors.yaml
@@ -320,7 +320,7 @@
   commercial: true
 - name: OneUptime
   nativeOTLP: true
-  url: https://oneuptime.com/product/apm
+  url: https://oneuptime.com/docs/telemetry/open-telemetry
   contact: hello@oneuptime.com
   oss: true
   commercial: true
