--- a/.github/workflows/first-timer-response.yml
+++ b/.github/workflows/first-timer-response.yml
@@ -7,6 +7,7 @@ on:
 
 permissions:
   contents: read
+  issues: write
 
 env:
   ISSUE_NUM: ${{ github.event.issue.number }}
@@ -30,29 +31,21 @@ jobs:
         with:
           egress-policy: audit
 
-      # 🔹 Normalize the comment to lowercase
+      # Normalize the comment to lowercase using environment variable (security best practice)
       - name: Normalize comment body
         id: normalize
+        env:
+          COMMENT_BODY: ${{ github.event.comment.body }}
         run: |
-          body="${{ github.event.comment.body }}"
-          echo "body_lower=$(echo "$body" | tr '[:upper:]' '[:lower:]')" >> "$GITHUB_OUTPUT"
+          echo "body_lower=$(echo "$COMMENT_BODY" | tr '[:upper:]' '[:lower:]')" >> "$GITHUB_OUTPUT"
 
-      # 🔹 Only continue if this is an issue (not a PR) and it looks like an assignment request
+      # Check if the comment looks like an assignment request
       - name: Check if comment is assignment request
         id: check-trigger
+        env:
+          BODY_LOWER: ${{ steps.normalize.outputs.body_lower }}
         run: |
-          body="${{ steps.normalize.outputs.body_lower }}"
-
-          # This step is now redundant due to the job-level if condition,
-          # but keeping it for now as the original instruction only asked to add to job-level.
-          # The job-level 'if' already filters for pull_request and comment body.
-          # This step will effectively always match 'true' if the job runs.
-          if [[ "${{ github.event.issue.pull_request }}" != "" ]]; then
-            echo "match=false" >> "$GITHUB_OUTPUT"
-            exit 0
-          fi
-
-          if echo "$body" | grep -Eiq \
+          if echo "$BODY_LOWER" | grep -Eiq \
             "assign this to me|assign me|can i work on this|i would like to work on this|i want to work on this|please assign|can you assign|i will work on this|i am working on this|i'm working on this|can i take this"; then
             echo "match=true" >> "$GITHUB_OUTPUT"
           else
@@ -69,29 +62,32 @@ jobs:
       - name: Check if commenter is an org member
         id: check-membership
         if: steps.check-trigger.outputs.match == 'true'
+        env:
+          GH_TOKEN: ${{ steps.otelbot-token.outputs.token }}
+          ORG: ${{ github.repository_owner }}
+          USERNAME: ${{ github.event.comment.user.login }}
         run: |
-          ORG="${{ github.repository_owner }}"
-          USERNAME="${{ env.COMMENT_AUTHOR }}"
-
           if gh api "orgs/$ORG/members/$USERNAME" --silent 2>/dev/null; then
             echo "is_member=true" >> "$GITHUB_OUTPUT"
           else
             echo "is_member=false" >> "$GITHUB_OUTPUT"
           fi
-        env:
-          GH_TOKEN: ${{ steps.otelbot-token.outputs.token }}
 
       - name: Post response to first-time contributor
-        if:
+        if: |
           steps.check-membership.outputs.is_member != 'true' &&
           steps.check-trigger.outputs.match == 'true'
+        env:
+          GH_TOKEN: ${{ steps.otelbot-token.outputs.token }}
+          COMMENT_AUTHOR: ${{ github.event.comment.user.login }}
+          CONTRIBUTING_URL: ${{ env.CONTRIBUTING_URL }}
+          ISSUE_NUM: ${{ env.ISSUE_NUM }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
         run: |
-          RESPONSE_BODY="Thank you for your interest in contributing to this project, @${{ env.COMMENT_AUTHOR }}! 🙏
+          RESPONSE_BODY="Thank you for your interest in contributing to this project, @$COMMENT_AUTHOR! 🙏
 
-          If this is your first time contributing, then please carefully read through [Fixing an existing issue](${{ env.CONTRIBUTING_URL }}).
+          If this is your first time contributing, then please carefully read through [Fixing an existing issue]($CONTRIBUTING_URL).
 
           As noted there, **we don't assign issues** unless you're a regular contributor. If you don't see any linked PRs and no one else has said they are working on the issue, feel free to submit a draft PR early to signal that you're working on it."
 
-          gh issue comment ${{ env.ISSUE_NUM }} --repo ${{ github.repository }} --body "$RESPONSE_BODY"
-        env:
-          GH_TOKEN: ${{ steps.otelbot-token.outputs.token }}
+          gh issue comment "$ISSUE_NUM" --repo "$GITHUB_REPOSITORY" --body "$RESPONSE_BODY"
