chore: update local and in-page dictionaries so spell-check passes

--- a/data/registry/collector-extension-azureauth.yml
+++ b/data/registry/collector-extension-azureauth.yml
@@ -1,4 +1,4 @@
-# cSpell:ignore azureauthextension azureauth
+# cSpell:ignore azureauthextension azureauth extensionauth
 title: Azure authenticator extension
 registryType: extension
 language: collector
