--- a/data/registry/instrumentation-go-graphql.yml
+++ b/data/registry/instrumentation-go-graphql.yml
@@ -1,4 +1,4 @@
-# cSpell:ignore ziehms
+# cSpell:ignore Uptrace ziehms
 title: GraphQL-Go instrumentation
 registryType: instrumentation
 language: go
