--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "_diff:fail": "git diff --name-only --exit-code || exit 1",
     "_fail": "exit 1",
     "_filename-error": "echo 'ERROR: the following files violate naming conventions; fix using: `npm run fix:filenames`'; echo; npm run -s _ls-bad-filenames; exit 1",
-    "_fix:trailing-spaces": "find content -name '*.md' -exec perl -i -pe 's/[ \t]+$//g' {} +",
     "_fix:format:diff": "npm run __check:format -- --write",
+    "_fix:trailing-spaces": "find content -name '*.md' -exec perl -i -pe 's/[ \t]+$//g' {} +",
     "_get:no": "echo SKIPPING get operation",
     "_get:submodule": "set -x && git submodule update --init ${DEPTH:- --depth 999}",
     "_hugo": "hugo --cleanDestinationDir",
-    "_install:dict": "npm install -D $(npm run -s _list:dict)",
+    "_install:cspell": "npm install -D $(npm run -s _list:cspell)",
     "_install:netlify-cli": "npm list netlify-cli || npm install -O netlify-cli",
     "_list:check:*": "npm run --loglevel=warn | grep -Ee '^\\s*check:[^:]+$'",
     "_list:check:for-test-and-fix": "npm -s run _list:check:* | grep -Ev \"i18n|${CMD_SKIP:-noop}\"",
-    "_list:dict": "grep '^\\s*\"@cspell' package.json | awk -F: '{print $1}'  | tr -d '\"'",
+    "_list:cspell": "grep -Ee '^\\s*\"@?cspell' package.json | awk -F: '{print $1}'  | tr -d '\"'",
     "_list:diff-never-empty": "echo README.md && npm run _list:diff",
     "_list:diff": "git diff --name-only --diff-filter=AMR",
     "_list:fix:*": "npm run --loglevel=warn | grep -Ee '^\\s*fix:[^:]+$' | grep -v 'fix:all'",
