--- a/.github/ISSUE_TEMPLATE/DOCS_UPDATE.yml
+++ b/.github/ISSUE_TEMPLATE/DOCS_UPDATE.yml
@@ -1,4 +1,4 @@
-name: Documentation Issue
+name: Documentation issue
 description: You've found an issue with the documentation.
 title: '[Docs]: '
 type: bug
@@ -17,10 +17,11 @@ body:
     id: page_path
     attributes:
       label: Name + path of the page
-      description: The relative path and page title where you found a problem.
-      placeholder:
-        'e.g., content/en/docs/concepts/what-is-otel.md — "What is
-        OpenTelemetry?"'
+      description: >-
+        The relative path and page title where you found a problem.
+      placeholder: >-
+        E.g., content/en/docs/concepts/what-is-otel.md — "What is
+        OpenTelemetry?"
     validations:
       required: true
 
@@ -35,9 +36,8 @@ body:
 
   - type: markdown
     attributes:
-      value: |
+      value: >-
         <sub>[React](https://github.blog/news-insights/product-news/add-reactions-to-pull-requests-issues-and-comments/)
-        with 👍 to help prioritize this issue. Please use comments to provide
-        useful context, avoiding `+1` or `me too`, to help us triage it. Learn
-        more
-        [here](https://opentelemetry.io/community/end-user/issue-participation/).</sub>
+        with 👍 to help prioritize this issue. Use comments to provide useful
+        context, avoid `+1` or `me too`, to help us triage it. [Learn
+        more](https://opentelemetry.io/community/end-user/issue-participation/).</sub>
