--- a/.github/ISSUE_TEMPLATE/PAGE_FEEDBACK.yml
+++ b/.github/ISSUE_TEMPLATE/PAGE_FEEDBACK.yml
@@ -2,7 +2,7 @@ name: Page Feedback
 description: >-
   Used for page feedback from users visiting opentelemetry.io and clicking "no"
   if a page was helpful.
-title: '[Page Feedback]: summary of your feedback'
+title: 'page feedback: '
 body:
   - type: input
     id: url
@@ -10,7 +10,7 @@ body:
       label: URL
       description: >-
         The URL of the webpage where you are facing an issue. If not
-        auto-populated, please copy the URL from the browser address bar.
+        auto-populated, copy the URL from the browser address bar.
       placeholder: https://opentelemetry.io/
     validations:
       required: true
@@ -19,7 +19,7 @@ body:
     attributes:
       label: Description
       description:
-        'How has the page not been helpful? What information is missing? '
+        How has the page not been helpful? What information is missing?
       placeholder: >-
         Provide details on the problem. The more information you share with us
         the faster we can resolve the issue.
@@ -27,9 +27,8 @@ body:
       required: true
   - type: markdown
     attributes:
-      value: |
+      value: >-
         <sub>[React](https://github.blog/news-insights/product-news/add-reactions-to-pull-requests-issues-and-comments/)
-        with 👍 to help prioritize this issue. Please use comments to provide
-        useful context, avoiding `+1` or `me too`, to help us triage it. Learn
-        more
-        [here](https://opentelemetry.io/community/end-user/issue-participation/).</sub>
+        with 👍 to help prioritize this issue. Use comments to provide useful
+        context, avoid `+1` or `me too`, to help us triage it. [Learn
+        more](https://opentelemetry.io/community/end-user/issue-participation/).</sub>
