--- a/data/registry/collector-exporter-hydrolix.yml
+++ b/data/registry/collector-exporter-hydrolix.yml
@@ -1,5 +1,5 @@
 # cSpell:ignore hydrolix
-title: Hydrolix HTTP Exporter
+title: Hydrolix Exporter
 registryType: exporter
 language: collector
 tags:
@@ -9,7 +9,8 @@ tags:
   - hydrolix
 license: Apache 2.0
 description:
-  Exports traces, metrics, and/or logs via HTTP to a Hydrolix cluster for analysis.
+  Exports traces, metrics, and/or logs via HTTP to a Hydrolix cluster for
+  analysis.
 authors:
   - name: Hydrolix
     url: https://hydrolix.io/
