docs: add initial kotlin sdk docs

--- a/data/instrumentation.yaml
+++ b/data/instrumentation.yaml
@@ -69,3 +69,9 @@ swift:
     traces: stable
     metrics: development
     logs: development
+kotlin:
+  name: Kotlin
+  status:
+    traces: development
+    metrics: development
+    logs: development
