Add custom markdownlint rule for alert types

--- a/.markdownlint-cli2.yaml
+++ b/.markdownlint-cli2.yaml
@@ -1,4 +1,5 @@
 customRules:
+  - ./scripts/_md-rules/alert-type-not-translated.mjs
   - ./scripts/_md-rules/unindent-code-blocks.js
   - ./scripts/_md-rules/trim-code-blank-lines.js
   - ./scripts/_md-rules/validate-links.js
