--- a/data/registry/exporter-go-dynatrace.yml
+++ b/data/registry/exporter-go-dynatrace.yml
@@ -10,7 +10,9 @@ urls:
   repo: https://github.com/akahenry/dynatrace-otel-exporter
   docs: https://github.com/akahenry/dynatrace-otel-exporter/blob/main/README.md
 license: Apache 2.0
-description: A Go-based OpenTelemetry metrics exporter that sends metrics to Dynatrace via the Metrics Ingestion API.
+description:
+  A Go-based OpenTelemetry metrics exporter that sends metrics to Dynatrace via
+  the Metrics Ingestion API.
 authors:
   - name: Henry Avila
     email: henrybkavila@gmail.com
