--- a/.github/workflows/first-timer-response.yml
+++ b/.github/workflows/first-timer-response.yml
@@ -37,7 +37,10 @@ jobs:
         env:
           COMMENT_BODY: ${{ github.event.comment.body }}
         run: |
-          echo "body_lower=$(echo "$COMMENT_BODY" | tr '[:upper:]' '[:lower:]')" >> "$GITHUB_OUTPUT"
+          # Use heredoc delimiter for multiline-safe output
+          echo "body_lower<<EOF" >> "$GITHUB_OUTPUT"
+          echo "$COMMENT_BODY" | tr '[:upper:]' '[:lower:]' >> "$GITHUB_OUTPUT"
+          echo "EOF" >> "$GITHUB_OUTPUT"
 
       # Check if the comment looks like an assignment request
       - name: Check if comment is assignment request
