chore(ai-content-detection): change npm command from ci to install
Signed-off-by: Vitor Vasconcellos <vitor.vasconcellos@mercadolivre.com>

--- a/.github/workflows/ai-content-detection.yml
+++ b/.github/workflows/ai-content-detection.yml
@@ -152,7 +152,7 @@ jobs:
 
       - name: Install script dependencies
         working-directory: ./scripts/ai-content-detection
-        run: npm ci
+        run: npm install
 
       - name: Run AI detection analysis
         working-directory: ./scripts/ai-content-detection
