--- a/.github/workflows/ai-content-detection.yml
+++ b/.github/workflows/ai-content-detection.yml
@@ -39,7 +39,9 @@ on:
     types: [opened, synchronize, reopened]
 
 concurrency:
-  group: ai-detection-${{ github.event.pull_request.number || github.event.inputs.pr_number || github.run_id }}
+  group: |
+    ai-detection-${{ github.event.pull_request.number ||
+    github.event.inputs.pr_number || github.run_id }}
   cancel-in-progress: true
 
 jobs:
@@ -145,7 +147,6 @@ jobs:
         with:
           node-version: '22'
           cache: 'npm'
-
 
       - name: Install GitHub Copilot CLI
         run: npm install -g @github/copilot
