--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "_diff:fail": "git diff --name-only --exit-code || exit 1",
     "_fail": "exit 1",
     "_filename-error": "echo 'ERROR: the following files violate naming conventions; fix using: `npm run fix:filenames`'; echo; npm run -s _ls-bad-filenames; exit 1",
+    "_fix:dict": "find content layouts -name \"*.md\" -print0 | xargs -0 scripts/normalize-cspell-front-matter.pl",
     "_fix:format:diff": "npm run __check:format -- --write",
     "_fix:trailing-spaces": "find content -name '*.md' -exec perl -i -pe 's/[ \t]+$//g' {} +",
     "_get:no": "echo SKIPPING get operation",
@@ -70,7 +71,7 @@
     "diff:check": "npm run _diff:check || (echo; echo 'WARNING: the files above have not been committed'; echo)",
     "diff:fail": "npm run _diff:check || (echo; echo 'ERROR: the files above have changed. Locally rerun `npm run test-and-fix` and commit changes'; echo; exit 1)",
     "fix:all": "npm run all -- $(npm -s run _list:fix:* | grep -Ev \"i18n|${CMD_SKIP:-noop}\")",
-    "fix:dict": "find content layouts -name \"*.md\" -print0 | xargs -0 scripts/normalize-cspell-front-matter.pl",
+    "fix:dict": "scripts/sort-cspell-words.pl .cspell/*.txt && npm run _fix:dict",
     "fix:expired": "npm run -s check:expired -- -q | xargs -r -I {} sh -c 'echo \"Deleting expired file: {}\" && rm {}'",
     "fix:filenames": "npm run _rename-to-kebab-case",
     "fix:format:diff": "npm run _fix:format:diff -- $(npm -s run _list:diff-never-empty)",
