fix(ci): ensure FOSSA scanning only runs in upstream repository
Signed-off-by: Vitor Vasconcellos <vitor.vasconcellos@mercadolivre.com>

--- a/.github/workflows/fossa.yml
+++ b/.github/workflows/fossa.yml
@@ -10,6 +10,8 @@ permissions:
 
 jobs:
   fossa:
+    # Only run in upstream repository, not in forks
+    if: github.repository == 'open-telemetry/opentelemetry.io'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@0c366fd6a839edf440554fa01a7085ccba70ac98 # v5.0.1
