fix(report-results): ensure job runs only on successful validation
Signed-off-by: Vitor Vasconcellos <vitor.vasconcellos@mercadolivre.com>

--- a/.github/workflows/ai-content-detection.yml
+++ b/.github/workflows/ai-content-detection.yml
@@ -190,7 +190,7 @@ jobs:
   report-results:
     name: 'Report Results'
     needs: [validate-inputs, analyze]
-    if: always()
+    if: always() && needs.validate-inputs.result == 'success'
     runs-on: ubuntu-latest
     steps:
       - name: Add job summary
