--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -140,10 +140,10 @@ params:
     sidebar_root_enabled: true
     feedback:
       enable: true
-      yes: >-
+      'yes': >-
         Thank you. Your feedback is appreciated!
       # prettier-ignore
-      no: >-
+      'no': >-
         Please let us know <a class="external-link" target="_blank" rel="noopener"
         href="https://github.com/open-telemetry/opentelemetry.io/issues/new?template=PAGE_FEEDBACK.yml&title=[Page+feedback]%3A+ADD+A+SUMMARY+OF+YOUR+FEEDBACK+HERE">how
         we can improve this page</a>. Your feedback is appreciated!
