--- a/data/registry/application-integration-java-keycloak.yml
+++ b/data/registry/application-integration-java-keycloak.yml
@@ -9,11 +9,11 @@ tags:
 urls:
   website: https://www.keycloak.org
   repo: https://github.com/keycloak/keycloak
-  docs: https://www.keycloak.org/server/tracing
+  docs: https://www.keycloak.org/observability/telemetry
 license: Apache 2.0
 description:
-  Keycloak utilizes OpenTelemetry for distributed tracing provided by the
-  Quarkus OpenTelemetry extension.
+  Keycloak utilizes OpenTelemetry for metrics, logging and distributed tracing
+  provided by the Quarkus OpenTelemetry extension.
 authors:
   - name: Keycloak Contributors
     url: https://github.com/keycloak
