Update to Hugo 0.155.3 and Docsy v0.13.0-103-g234f18dd

--- a/config/_default/module-template.yaml
+++ b/config/_default/module-template.yaml
@@ -1,6 +1,9 @@
 # This Hugo config `mounts` template is rendered as `module.yaml` and
 # automatically used by Hugo. Also see `hugo.yaml` for other Hugo configuration.
 
+hugoVersion:
+  extended: true
+  min: 0.155.3
 mounts:
   ## en
   - source: content/en
