feat(workflow): add scheduled trigger for move-to-emeritus workflow
Signed-off-by: Vitor Vasconcellos <vitor.vasconcellos@mercadolivre.com>

--- a/.github/workflows/move-to-emeritus.yml
+++ b/.github/workflows/move-to-emeritus.yml
@@ -2,6 +2,9 @@ name: Move inactive members to emeritus
 
 on:
   workflow_dispatch:
+  schedule:
+    # At 05:00, every Monday
+    - cron: 0 5 * * 1
 
 permissions:
   contents: read
