--- a/.github/workflows/move-to-emeritus.yml
+++ b/.github/workflows/move-to-emeritus.yml
@@ -14,7 +14,7 @@ jobs:
     name: Move inactive members to emeritus
     runs-on: ubuntu-latest
     # Remove the if statement below when testing against a fork
-    # if: github.repository == 'open-telemetry/opentelemetry.io'
+    if: github.repository == 'open-telemetry/opentelemetry.io'
     steps:
       - name: Checkout
         uses: actions/checkout@v6.0.2
