Improve PR creation error handling to distinguish real failures from expected 'no commits' case
- Capture stderr from gh pr create to inspect error messages
- Only treat 'No commits between' error as non-fatal (exit 0)
- Fail workflow (exit 1) for real errors: auth, permissions, API issues, rate limiting
- Ensure temp file cleanup in both success and failure paths to prevent resource leak
- Prevents silent failures while maintaining graceful handling of expected case

Addresses feedback from Copilot AI review and @jaydeluca suggestion

--- a/.github/workflows/update-spec-integration-branch.yml
+++ b/.github/workflows/update-spec-integration-branch.yml
@@ -152,6 +152,7 @@ jobs:
           then
             PR_URL=$(gh pr view --json url --jq '.url')
             printf "PR created: %s\n" "$PR_URL"
+            rm "$stderr"
           else
             error_output=$(cat "$stderr")
             rm "$stderr"
