--- a/.github/workflows/update-spec-integration-branch.yml
+++ b/.github/workflows/update-spec-integration-branch.yml
@@ -146,16 +146,15 @@ jobs:
           fi
 
           stderr=$(mktemp)
+          trap 'rm -f "$stderr"' EXIT
           if gh pr create --title "DRAFT Update ${{ env.REPO }} to unreleased $VERSION-dev" \
               --body "This is a draft PR used for identifying issues integrating the latest (unreleased) [${{ env.REPO }}](https://github.com/open-telemetry/${{ env.REPO }})." \
               --draft 2>"$stderr";
           then
             PR_URL=$(gh pr view --json url --jq '.url')
             printf "PR created: %s\n" "$PR_URL"
-            rm "$stderr"
           else
             error_output=$(cat "$stderr")
-            rm "$stderr"
 
             # Only treat "no commits" error as non-fatal
             if echo "$error_output" | grep -Fq "No commits between"; then
